--- a/views/result.pug
+++ b/views/result.pug
@@ -11,23 +11,32 @@ html
 
     button(style="display: block;") back
 
-    for data, i in [emc, cmn, yue]
-      div.language
-        h3
-          if i == 0
-            | EMC (modified <a href="https://zh.wikipedia.org/zh/User:Polyhedron/%E4%B8%AD%E5%8F%A4%E6%BC%A2%E8%AA%9E%E6%8B%BC%E9%9F%B3">polyhedron's system</a>)
-          else
-            | #{[null, "mandarin", "yue"][i]}
-        div.ruby
-          for datum in data
-            if datum[1]
-              ruby #{datum[0]}
-                rt= datum[1].slice().reverse().join("\n")
-            else
-              | #{datum[0]}
-        div.only
-          for datum in data
-            if datum[1]
-              | #{datum[1][0]}
-            else
-              | #{datum[0]}
+    ul
+      li EMC: <a href="https://zh.wikipedia.org/zh/User:Polyhedron/%E4%B8%AD%E5%8F%A4%E6%BC%A2%E8%AA%9E%E6%8B%BC%E9%9F%B3">polyhedron's system</a> modified
+      li yue: <a href="https://github.com/sumiq/romanize-zho#yue"> original</a>
+      li mandarin: <a href="https://github.com/sumiq/romanize-zho#mandarin">original</a>
+
+    .buttons
+      button(data-language="emc") EMC
+      button(data-language="yue").selected yue
+      button(data-language="yue-ascii") yue (ASCII)
+      button(data-language="cmn") mandarin
+
+    .languages
+      for data, i in [emc, yue, yueAscii, cmn,]
+        div(id=["emc", "yue", "yue-ascii", "cmn",][i], class=i == 1 ? "selected" : "").language
+          div.ruby
+            for datum in data
+              if datum[1]
+                if datum[1].length == 1
+                  ruby.one #{datum[0]}
+                    rt= datum[1][0]
+                else
+                  ruby.many #{datum[0]}
+                    rt
+                      select
+                        for phonetic in datum[1]
+                          option(value=phonetic)= phonetic
+              else
+                span.bare= datum[0]
+          div.roman
