--- a/public/index.css
+++ b/public/index.css
@@ -1,7 +1,1 @@
-textarea {
-  width: 100%;
-  height: 50%;
-  font-family: "Noto Sans";
-  white-space: pre-wrap;
-  font-size: 100%;
-}
+textarea{width:100%;height:50%;font-family:"Noto Sans";white-space:pre-wrap;font-size:100%}
