--- a/public/result.css
+++ b/public/result.css
@@ -1,18 +1,1 @@
-div {
-  box-sizing: border-box;
-  /*border: 1px solid;*/
-  width: 50%;
-  font-family: "Noto Sans";
-  white-space: pre-wrap;
-  display: inline-block;
-  vertical-align: top;
-}
-div.language {
-  width: 33%;
-}
-ruby {
-  /*ruby-position: under;*/
-}
-rt {
-  font-size: 80%
-}
+div{box-sizing:border-box;width:50%;font-family:'Noto Sans';font-stretch:condensed;white-space:pre-wrap;display:inline-block;vertical-align:top}ruby rt{margin:0;padding:0;font-size:inherit}select,option{appearance:none;outline:0;margin:0;padding:0;font:inherit;background-color:transparent}.languages{width:100%;border:1px solid}.languages .language{width:100%;display:none}.languages .selected{display:block}.buttons{width:100%}.buttons button{background-color:transparent;border:1px solid black;border-bottom:none;outline:none}.buttons button+button{border-left:none}.buttons .selected{background-color:black;color:white}
