--- a/views/index.pug
+++ b/views/index.pug
@@ -6,25 +6,35 @@ html
     title romanize chinese
 
   body
-    h1 romanize chinese
+    h1
+      a(href="https://github.com/sumiq/romanize-zho#romanize-chinese") romanize chinese
 
     if text
       textarea.
         #{decodeURIComponent(text)}
     else
       textarea
-        include 千字文.txt
-
-    //
-      幫 滂 並 明
-      非 敷 奉 微
-      端 透 定 泥
-      知 徹 澄 娘
-
-      精 清 從 來 心 邪
-      照 穿 牀 日 審 禪
-
-      見 溪 群 疑
-      影 ＿ ＿ 喻 曉 匣
+        | 孟浩然/春曉
+        | 春眠不覺曉
+        | 處處聞啼鳥
+        | 夜來風雨聲
+        | 花落知多少
+        |
+        | 幫 滂 並 明
+        | 非 敷 奉 微
+        | 端 透 定 泥
+        | 知 徹 澄 娘
+        | 精 清 從 來 心 邪
+        | 照 穿 牀 日 審 禪
+        | 見 溪 群 疑
+        | 影 ＿ ＿ 喻 曉 匣
+        |
+        | 將 - 張
+        | 槍 - 昌
+        | 相 - 傷
+        |
+        | 將 - 江
+        | 靑 - 輕
+        | 西 - 希
 
     button convert
