--- a/public/_common.css
+++ b/public/_common.css
@@ -1,1 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap");body{font-family:"Noto Sans TC", sans-serif}
+body{font-stretch:condensed;font-weight:100}
