--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap')
-
 body
-  font-family: "Noto Sans TC", sans-serif
+  font-stretch: condensed
+  font-weight: 100
