--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap')
+
 body
-  font-stretch: condensed
-  font-weight: 100
+  //font-stretch: condensed
+  //font-weight: 100
+  font-family: 'Noto Sans', 'Noto Sans TC'
